--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@apollo/server": "^4.12.2",
-    "@graphql-tools/merge": "^9.0.24",
-    "bcryptjs": "^3.0.2",
-    "connect-mongodb-session": "^5.0.0",
-    "dotenv": "^17.0.0",
-    "express": "^5.1.0",
-    "express-session": "^1.18.1",
-    "graphql": "^16.11.0",
-    "graphql-passport": "^0.6.8",
-    "mongoose": "^8.16.1",
-    "passport": "^0.7.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  }
+		"@apollo/server": "^4.10.0",
+		"@graphql-tools/merge": "^9.0.3",
+		"bcryptjs": "^2.4.3",
+		"connect-mongodb-session": "^5.0.0",
+		"cron": "^3.1.6",
+		"dotenv": "^16.4.5",
+		"express": "^4.18.2",
+		"express-session": "^1.18.0",
+		"graphql": "^16.8.1",
+		"graphql-passport": "^0.6.8",
+		"mongoose": "^8.2.0",
+		"passport": "^0.7.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.0"
+	}
 }
